# edna

./: .gitignore  Background.md  LICENSE  README.md  USAGE.md  agents.md  git_repo.txt  pyproject.toml
improv_docs/: investor_feedback.txt
smoke_test/: FPT_GT_power_model.txt  FPT_GT_power_model.txt.edna  PD_FPT_initial_data.csv  PD_FPT_initial_data.csv.edna  PD_FPT_initial_match.txt  PD_FPT_initial_match.txt.edna  Scania_eng_data.txt  Scania_eng_data.txt.edna  Watson_Ch10_Matching.pdf.edna  code_improvement.txt  code_improvement.txt.edna  commands.txt  docus_1.md  docus_1.md.edna  docus_2.md  docus_2.md.edna  eng_dna.db  fileC.txt.edna  geom_lineage.mmd  geom_v1.txt  geom_v1.txt.edna  geom_v2.txt  geom_v2.txt.edna  geom_v3.txt  geom_v3.txt.edna  lineage.md  lineage.mmd  scania_rpe.txt  scania_rpe.txt.edna  tagged.txt
smoke_test/archive/: fileA.txt  fileA.txt.edna
src/eng_dna/: __init__.py  artefacts.py  cli.py  db.py  identity.py  operations.py  sidecar.py  sync.py
src/eng_dna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_graph.py  test_graph_cli.py  test_identity.py  test_project_cli.py  test_project_delete.py  test_projects.py  test_sidecar.py  test_sync.py  test_tag_modes_cli.py  test_tagging.py  test_unlink.py  test_versioning.py
